--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: calc(100% + 1px);
+    width: 100%;
     height: 150px;
   }
 }
