--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,7 @@ body {
   color: $white;
   text-transform: uppercase;
   text-align: center;
+  overflow: hidden;
   
   .title {
     font-size: 14px;
